--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,266 +16,6 @@ only_commits:
 environment:
     GOVERSION: 1.21.1
     matrix:
-        - GOOS: android
-          GOARCH: arm
-          CGO_ENABLED: 1
-          GOARM: 7
-          PREFIX: android-arm
-          SUFFIX: 
-          HOST: linux
-        - GOOS: android
-          GOARCH: arm64
-          CGO_ENABLED: 1
-          PREFIX: android-aarch64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: android
-          GOARCH: 386
-          CGO_ENABLED: 1
-          PREFIX: android-386
-          SUFFIX: 
-          HOST: linux
-        - GOOS: android
-          GOARCH: amd64
-          CGO_ENABLED: 1
-          PREFIX: android-amd64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: android
-          GOARCH: arm
-          CGO_ENABLED: 1
-          GOARM: 7
-          PREFIX: android-arm-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: android
-          GOARCH: arm64
-          CGO_ENABLED: 1
-          PREFIX: android-aarch64-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: android
-          GOARCH: 386
-          CGO_ENABLED: 1
-          PREFIX: android-386-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: android
-          GOARCH: amd64
-          CGO_ENABLED: 1
-          PREFIX: android-amd64-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: windows
-          GOARCH: amd64
-          PREFIX: windows-amd64
-          SUFFIX: .exe
-          HOST: linux
-        - GOOS: windows
-          GOARCH: arm
-          PREFIX: windows-arm
-          SUFFIX: .exe
-          HOST: linux
-        - GOOS: windows
-          GOARCH: arm64
-          PREFIX: windows-arm64
-          SUFFIX: .exe
-          HOST: linux
-        - GOOS: windows
-          GOARCH: arm
-          PREFIX: windows-arm-lite
-          SUFFIX: .exe
-          HOST: linux
-          LITE: 1
-        - GOOS: windows
-          GOARCH: arm64
-          PREFIX: windows-arm64-lite
-          SUFFIX: .exe
-          HOST: linux
-          LITE: 1
-        - GOOS: darwin
-          GOARCH: arm64
-          CGO_ENABLED: 1
-          PREFIX: darwin-universal
-          SUFFIX: 
-          HOST: darwin
-        - GOOS: darwin
-          GOARCH: arm64
-          CGO_ENABLED: 1
-          PREFIX: darwin-universal-lite
-          SUFFIX: 
-          HOST: darwin
-          LITE: 1
-        - GOOS: linux
-          GOARCH: amd64
-          CGO_ENABLED: 0
-          PREFIX: linux-amd64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: freebsd
-          GOARCH: amd64
-          PREFIX: freebsd-amd64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: netbsd
-          GOARCH: amd64
-          PREFIX: netbsd-amd64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: openbsd
-          GOARCH: amd64
-          PREFIX: openbsd-amd64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: dragonfly
-          GOARCH: amd64
-          PREFIX: dragonfly-amd64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: solaris
-          GOARCH: amd64
-          PREFIX: solaris-amd64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: illumos
-          GOARCH: amd64
-          PREFIX: illumos-amd64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: windows
-          GOARCH: 386
-          PREFIX: windows-386
-          SUFFIX: .exe
-          HOST: linux
-        - GOOS: linux
-          GOARCH: 386
-          CGO_ENABLED: 0
-          PREFIX: linux-386
-          SUFFIX: 
-          HOST: linux
-        - GOOS: freebsd
-          GOARCH: 386
-          PREFIX: freebsd-386
-          SUFFIX: 
-          HOST: linux
-        - GOOS: netbsd
-          GOARCH: 386
-          PREFIX: netbsd-386
-          SUFFIX: 
-          HOST: linux
-        - GOOS: openbsd
-          GOARCH: 386
-          PREFIX: openbsd-386
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: arm
-          GOARM: 5
-          PREFIX: linux-armv5
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: arm
-          GOARM: 6
-          PREFIX: linux-armv6
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: arm
-          GOARM: 7
-          PREFIX: linux-armv7
-          SUFFIX: 
-          HOST: linux
-        - GOOS: freebsd
-          GOARCH: arm
-          PREFIX: freebsd-arm
-          SUFFIX: 
-          HOST: linux
-        - GOOS: netbsd
-          GOARCH: arm
-          PREFIX: netbsd-arm
-          SUFFIX: 
-          HOST: linux
-        - GOOS: openbsd
-          GOARCH: arm
-          PREFIX: openbsd-arm
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: arm64
-          PREFIX: linux-arm64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: freebsd
-          GOARCH: arm64
-          PREFIX: freebsd-arm64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: netbsd
-          GOARCH: arm64
-          PREFIX: netbsd-arm64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: openbsd
-          GOARCH: arm64
-          PREFIX: openbsd-arm64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: ppc64
-          PREFIX: linux-ppc64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: ppc64le
-          PREFIX: linux-ppc64le
-          SUFFIX: 
-          HOST: linux
-        - GOOS: openbsd
-          GOARCH: mips64
-          PREFIX: openbsd-mips64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: mips64
-          GOMIPS: hardfloat
-          PREFIX: linux-mips64-hardfloat
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: mips64
-          GOMIPS: softfloat
-          PREFIX: linux-mips64-softfloat
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: mips64le
-          GOMIPS: hardfloat
-          PREFIX: linux-mips64le-hardfloat
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: mips64le
-          GOMIPS: softfloat
-          PREFIX: linux-mips64le-softfloat
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: mips
-          GOMIPS: hardfloat
-          PREFIX: linux-mips-hardfloat
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: mips
-          GOMIPS: softfloat
-          PREFIX: linux-mips-softfloat
-          SUFFIX: 
-          HOST: linux
         - GOOS: linux
           GOARCH: mipsle
           GOMIPS: hardfloat
@@ -288,145 +28,6 @@ environment:
           PREFIX: linux-mipsle-softfloat
           SUFFIX: 
           HOST: linux
-        - GOOS: linux
-          GOARCH: s390x
-          PREFIX: linux-s390x
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: riscv64
-          PREFIX: linux-riscv64
-          SUFFIX: 
-          HOST: linux
-        - GOOS: linux
-          GOARCH: riscv64
-          PREFIX: linux-riscv64-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: linux
-          GOARCH: arm
-          GOARM: 5
-          PREFIX: linux-armv5-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: linux
-          GOARCH: arm
-          GOARM: 6
-          PREFIX: linux-armv6-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: linux
-          GOARCH: arm
-          GOARM: 7
-          PREFIX: linux-armv7-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: freebsd
-          GOARCH: arm
-          PREFIX: freebsd-arm-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: netbsd
-          GOARCH: arm
-          PREFIX: netbsd-arm-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: openbsd
-          GOARCH: arm
-          PREFIX: openbsd-arm-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: linux
-          GOARCH: arm64
-          PREFIX: linux-arm64-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: freebsd
-          GOARCH: arm64
-          PREFIX: freebsd-arm64-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: netbsd
-          GOARCH: arm64
-          PREFIX: netbsd-arm64-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: openbsd
-          GOARCH: arm64
-          PREFIX: openbsd-arm64-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: linux
-          GOARCH: ppc64
-          PREFIX: linux-ppc64-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: linux
-          GOARCH: ppc64le
-          PREFIX: linux-ppc64le-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: openbsd
-          GOARCH: mips64
-          PREFIX: openbsd-mips64-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: linux
-          GOARCH: mips64
-          GOMIPS: hardfloat
-          PREFIX: linux-mips64-hardfloat-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: linux
-          GOARCH: mips64
-          GOMIPS: softfloat
-          PREFIX: linux-mips64-softfloat-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: linux
-          GOARCH: mips64le
-          GOMIPS: hardfloat
-          PREFIX: linux-mips64le-hardfloat-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: linux
-          GOARCH: mips64le
-          GOMIPS: softfloat
-          PREFIX: linux-mips64le-softfloat-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: linux
-          GOARCH: mips
-          GOMIPS: hardfloat
-          PREFIX: linux-mips-hardfloat-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
-        - GOOS: linux
-          GOARCH: mips
-          GOMIPS: softfloat
-          PREFIX: linux-mips-softfloat-lite
-          SUFFIX: 
-          HOST: linux
-          LITE: 1
         - GOOS: linux
           GOARCH: mipsle
           GOMIPS: hardfloat
@@ -502,18 +103,20 @@ build_script:
     - sed -i.bak 's|forward:forward|fallback:github.com/missdeer/fallback\ndnsredir:github.com/leiless/dnsredir\nforward:forward\nproxy:github.com/missdeer/proxy\nhttps:github.com/v-byte-cpu/coredns-https|g' plugin.cfg
     - sed -i.bak 's|hosts:hosts|ads:github.com/missdeer/ads\nblocklist:github.com/relekang/coredns-blocklist\nhosts:hosts|g' plugin.cfg
     - sed -i.bak 's|rewrite:rewrite|rewrite:rewrite\nbogus:github.com/missdeer/bogus\nipset:github.com/missdeer/ipset|g' plugin.cfg
-    - sed -i.bak 's|cache:cache|cache:cache\nredisc:github.com/missdeer/redis|g' plugin.cfg
+    - sed -i.bak 's|cache:cache|cache:cache\non:github.com/coredns/caddy/onevent\nmeshname:github.com/zhoreeq/coredns-meshname\nmeship:github.com/zhoreeq/coredns-meship\nens:github.com/wealdtech/coredns-ens\nwgsd:github.com/jwhited/wgsd\nredisc:github.com/missdeer/redis|g' plugin.cfg
     - echo "replace (" >> go.mod
     - echo "    github.com/leiless/dnsredir => ../dnsredir" >> go.mod
     - echo ")" >> go.mod
     - sed -i.bak '/azure/d' plugin.cfg
     - sed -i.bak '/route53/d' plugin.cfg
-    - sed -i.bak '/trace/d' plugin.cfg
     - sed -i.bak '/etcd/d' plugin.cfg
     - sed -i.bak '/clouddns/d' plugin.cfg
     - sed -i.bak '/k8s_external/d' plugin.cfg
     - sed -i.bak '/kubernetes/d' plugin.cfg
-    - if [ "$LITE"x = "1"x ]; then sed -i.bak '/geoip/d' plugin.cfg; fi
+    - sed -i.bak '/chaos/d' plugin.cfg
+    - sed -i.bak '/dnstap/d' plugin.cfg
+    - sed -i.bak '/prometheus/d' plugin.cfg
+    - sed -i.bak '/geoip/d' plugin.cfg
     - if [ "$LITE"x = "1"x ]; then sed -i.bak '/nsid/d' plugin.cfg; fi
     - if [ "$LITE"x = "1"x ]; then sed -i.bak '/debug/d' plugin.cfg; fi
     - if [ "$LITE"x = "1"x ]; then sed -i.bak '/trace/d' plugin.cfg; fi
@@ -522,10 +125,8 @@ build_script:
     - if [ "$LITE"x = "1"x ]; then sed -i.bak '/metadata/d' plugin.cfg; fi
     - if [ "$LITE"x = "1"x ]; then sed -i.bak '/cancel/d' plugin.cfg; fi
     - if [ "$LITE"x = "1"x ]; then sed -i.bak '/pprof/d' plugin.cfg; fi
-    - if [ "$LITE"x = "1"x ]; then sed -i.bak '/dnstap/d' plugin.cfg; fi
     - if [ "$LITE"x = "1"x ]; then sed -i.bak '/dns64/d' plugin.cfg; fi
     - if [ "$LITE"x = "1"x ]; then sed -i.bak '/acl/d' plugin.cfg; fi
-    - if [ "$LITE"x = "1"x ]; then sed -i.bak '/chaos/d' plugin.cfg; fi
     - if [ "$LITE"x = "1"x ]; then sed -i.bak '/dnssec/d' plugin.cfg; fi
     - if [ "$LITE"x = "1"x ]; then sed -i.bak '/secondary/d' plugin.cfg; fi
     - if [ "$LITE"x = "1"x ]; then sed -i.bak '/loop/d' plugin.cfg; fi
