--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,42 @@ only_commits:
 environment:
     GOVERSION: 1.21.1
     matrix:
+        - GOOS: android
+          GOARCH: arm
+          CGO_ENABLED: 1
+          GOARM: 7
+          PREFIX: android-arm
+          SUFFIX: 
+          HOST: linux
+        - GOOS: android
+          GOARCH: arm64
+          CGO_ENABLED: 1
+          PREFIX: android-aarch64
+          SUFFIX: 
+          HOST: linux
+        - GOOS: android
+          GOARCH: 386
+          CGO_ENABLED: 1
+          PREFIX: android-386
+          SUFFIX: 
+          HOST: linux
+        - GOOS: windows
+          GOARCH: amd64
+          PREFIX: windows-amd64
+          SUFFIX: .exe
+          HOST: linux
+        - GOOS: linux
+          GOARCH: amd64
+          CGO_ENABLED: 0
+          PREFIX: linux-amd64
+          SUFFIX: 
+          HOST: linux
+        - GOOS: linux
+          GOARCH: arm
+          GOARM: 7
+          PREFIX: linux-armv7
+          SUFFIX: 
+          HOST: linux
         - GOOS: linux
           GOARCH: mipsle
           GOMIPS: hardfloat
